--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -39,11 +39,11 @@
     <span class="card-B">
       <div class="articles-show-details">
         <div class="articles-show-descript">
-          <p><strong>Nom :</strong> <%= @article.name %></p>
-          <p><strong>Prix :</strong> <%= @article.price %></p>
-          <p><strong>Stock :</strong> <%= @article.stock %></p>
-          <p><strong>Catégorie :</strong> <%= @article.category %></p>
-          <p><strong>Description :</strong> <%= @article.description %></p>
+          <p><strong></strong> <%= @article.name %></p>
+          <p><strong></strong> <%= @article.price %></p>
+          <p><strong></strong> <%= @article.stock %></p>
+          <p><strong></strong> <%= @article.category %></p>
+          <p><strong></strong> <%= @article.description %></p>
         </div>
 
       <% if current_user&.admin? %>
