--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -39,7 +39,7 @@
     <span class="card-B">
       <div class="articles-show-details">
         <div class="articles-show-descript">
-          <p><strong></strong> <%= @article.name %></p>
+          <h2><strong></strong> <%= @article.name %></h2>
           <p><strong></strong> <%= @article.price %></p>
           <p><strong></strong> <%= @article.stock %></p>
           <p><strong></strong> <%= @article.category %></p>
