--- a/app/assets/stylesheets/pages/_articles_show.scss
+++ b/app/assets/stylesheets/pages/_articles_show.scss
@@ -53,6 +53,17 @@
       flex-direction: column;
 
       .articles-show-details {
+
+        h2 {
+          margin: 0 8px;
+          color: #e8997c;
+          font-family: "Dancing Script", serif;
+          font-weight: 600;
+          text-decoration: none;
+          font-size: 4vw;
+        }
+
+
         p {
           font-size: 18px;
           margin-bottom: 10px;
