--- a/app/assets/stylesheets/pages/_articles_show.scss
+++ b/app/assets/stylesheets/pages/_articles_show.scss
@@ -52,7 +52,7 @@
       display: flex;
       flex-direction: column;
 
-      .articles-show-details {
+      .articles-show-descript {
 
         h2 {
           margin: 0 8px;
