--- a/app/assets/stylesheets/pages/_articles_show.scss
+++ b/app/assets/stylesheets/pages/_articles_show.scss
@@ -65,8 +65,11 @@
 
 
         p {
+          margin: 0 8px;
+          color: #e8997c;
+          font-family: "Dancing Script", serif;
           font-size: 16px;
-          margin-bottom: 10px;
+          text-decoration: none;
 
           strong {
             color: #9a5f45;
