--- a/app/assets/stylesheets/pages/_articles_show.scss
+++ b/app/assets/stylesheets/pages/_articles_show.scss
@@ -66,9 +66,9 @@
 
         p {
           margin: 0 8px;
-          color: #e8997c;
+          color: black;
           font-family: "Dancing Script", serif;
-          font-size: 16px;
+          font-size: 24px;
           text-decoration: none;
 
           strong {
