--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -41,7 +41,7 @@
         <div class="articles-show-descript">
           <h2><strong></strong> <%= @article.name %></h2>
           <p><strong></strong> <%= @article.description %></p>
-          <p><strong></strong> <%= @article.price %></p>
+          <p><strong>€</strong> <%= @article.price %></p>
         </div>
 
       <% if current_user&.admin? %>
