--- a/app/assets/stylesheets/pages/_articles_show.scss
+++ b/app/assets/stylesheets/pages/_articles_show.scss
@@ -72,7 +72,7 @@
           text-decoration: none;
 
           strong {
-            color: #9a5f45;
+            color: black;
           }
         }
       }
