--- a/app/assets/stylesheets/pages/_articles_show.scss
+++ b/app/assets/stylesheets/pages/_articles_show.scss
@@ -65,7 +65,7 @@
 
 
         p {
-          margin: 0 8px;
+          margin: 8px;
           color: black;
           font-family: "Dancing Script", serif;
           font-size: 18px;
