--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -50,7 +50,7 @@
             <%= button_to 'Supprimer', article_path(@article), method: :delete, data: { confirm: 'Êtes-vous sûr de vouloir supprimer cet article ?' }, class: 'btn btn-danger' %>
           </div>
         <% end %>
-          <%= button_to 'Ajouter au panier', cart_add_path(@article), method: :post, class: 'btn btn-success' %>
+          <%= button_to 'Ajouter au panier', cart_items_path(article_id: @article.id), method: :post, class: 'btn btn-success' %>
 
       </div>
 
