--- a/app/assets/stylesheets/pages/_articles_show.scss
+++ b/app/assets/stylesheets/pages/_articles_show.scss
@@ -86,6 +86,18 @@
           font-size: 16px;
           padding: 8px 16px;
         }
+
+        .button-ajouter-au-panier {
+          background-color: #e8997c;
+          color: white;
+          border: none;
+          cursor: pointer;
+          transition: background-color 0.3s;
+
+          &:hover {
+            background-color: #d88a6b;
+          }
+        }
       }
 
     }
