--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -49,7 +49,7 @@
             <%= link_to 'Éditer', edit_article_path(@article), class: 'btn btn-warning' %>
             <%= button_to 'Supprimer', article_path(@article), method: :delete, data: { confirm: 'Êtes-vous sûr de vouloir supprimer cet article ?' }, class: 'btn btn-danger' %>
         <% end %>
-          <%= button_to 'Ajouter au panier', cart_items_path(article_id: @article.id), method: :post, class: 'btn btn-success' %>
+          <%= button_to 'Ajouter au panier', cart_items_path(article_id: @article.id), method: :post, class: 'button-ajouter-au-panier' %>
           </div>
 
       </div>
