--- a/app/assets/stylesheets/pages/_articles_show.scss
+++ b/app/assets/stylesheets/pages/_articles_show.scss
@@ -93,6 +93,11 @@
           border: none;
           cursor: pointer;
           transition: background-color 0.3s;
+          font-size: 16px;
+          padding: 8px 16px;
+          font-family: "Dancing Script", serif;
+          font-weight: 600;
+          font-size: 4vw;
 
           &:hover {
             background-color: #d88a6b;
