--- a/app/assets/stylesheets/pages/_articles_show.scss
+++ b/app/assets/stylesheets/pages/_articles_show.scss
@@ -96,6 +96,7 @@
           font-size: 16px;
           padding: 8px 16px;
           font-family: "Dancing Script", serif;
+          border-radius: 4px;
 
           &:hover {
             background-color: #d88a6b;
