--- a/app/views/cart_items/create.html.erb
+++ b/app/views/cart_items/create.html.erb
@@ -1,2 +1,2 @@
 <h1>CartItems#create</h1>
-<p>Find me in app/views/cart_items/create.html.erb</p>
+<p>Find 2*me in app/views/cart_items/create.html.erb</p>
