--- a/app/views/cart_items/create.html.erb
+++ b/app/views/cart_items/create.html.erb
@@ -1,2 +1,3 @@
 <h1>CartItems#create</h1>
-<p>Find 2*me in app/views/cart_items/create.html.erb</p>
+<p>Article ajouté au panier avec succès.</p>
+<%= link_to 'Voir le panier', cart_path(current_cart) %>
