--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -1,13 +1,35 @@
-<h2>Panier</h2>
+<h2>Votre panier</h2>
 
 <% if @cart.cart_items.any? %>
-  <ul>
-    <% @cart.cart_items.each do |item| %>
-      <li>
-        <%= item.article.name %> - <%= number_to_currency(item.article.price) %>
-      </li>
-    <% end %>
-  </ul>
+  <table class="table">
+    <thead>
+      <tr>
+        <th>Article</th>
+        <th>Prix unitaire</th>
+        <th>Quantité</th>
+        <th>Total</th>
+      </tr>
+    </thead>
+    <tbody>
+      <% total = 0 %>
+      <% @cart.cart_items.includes(:article).each do |item| %>
+        <% subtotal = item.article.price * item.quantity %>
+        <% total += subtotal %>
+        <tr>
+          <td><%= item.article.name %></td>
+          <td><%= number_to_currency(item.article.price, unit: "€") %></td>
+          <td><%= item.quantity %></td>
+          <td><%= number_to_currency(subtotal, unit: "€") %></td>
+        </tr>
+      <% end %>
+    </tbody>
+    <tfoot>
+      <tr>
+        <th colspan="3">Total</th>
+        <th><%= number_to_currency(total, unit: "€") %></th>
+      </tr>
+    </tfoot>
+  </table>
 <% else %>
-  <p>Le panier est vide.</p>
+  <p>Votre panier est vide.</p>
 <% end %>
