--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -33,7 +33,7 @@
     </div>
 
     <%= link_to cart_path, class: "btn btn-outline-dark" do %>
-      <i class="fa-solid fa-cart-shopping"></i> Voir le panier
+      <i class="fa-solid fa-cart-shopping"></i>
     <% end %>  </div>
 </nav>
 
