--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -35,7 +35,7 @@
     </div>
 
     <div class="text-end mt-3">
-      <%# <%= link_to "🧾 Passer au paiement", checkout_path, class: "btn btn-success px-4 py-2" %> %>
+      <%# <%= link_to "🧾 Passer au paiement", checkout_path, class: "btn btn-success px-4 py-2" %>
     </div>
   <% else %>
     <div class="alert alert-info text-center mt-4" role="alert">
