--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -1,3 +1,6 @@
+<%# Barra de navegacion general %>
+  <%= render "shared/navbar" %>
+
 <div class="container mt-4">
   <h2 class="mb-4 text-center">🛒 Votre panier</h2>
 
