--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -28,6 +28,9 @@
 @import "pages/admin_dashboard";
 @import "pages/admin_users";
 
+// Basket
+@import "pages/cart_show";
+
 
 // background-color: #9a5f45;
 // background-color: #f3d2c3;
