--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -1,6 +1,9 @@
 <%# Barra de navegacion general %>
   <%= render "shared/navbar" %>
 
+  <%# Header general %>
+  <%= render 'shared/header' %>
+
 <div class="container mt-4">
   <h2 class="mb-4 text-center">🛒 Votre panier</h2>
 
