--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -4,6 +4,7 @@
   <%# Header general %>
   <%= render 'shared/header' %>
 
+<%# division del basket %>
 <div class="container mt-4">
   <h2 class="mb-4 text-center">🛒 Votre panier</h2>
 
