--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -5,7 +5,7 @@
   <%= render 'shared/header' %>
 
 <%# division del basket %>
-<div class="container mt-4">
+<div class="basket-container mt-4">
   <h2 class="mb-4 text-center">🛒 Votre panier</h2>
 
   <% if @cart.cart_items.any? %>
