--- a/app/assets/stylesheets/pages/_cart_show.scss
+++ b/app/assets/stylesheets/pages/_cart_show.scss
@@ -67,7 +67,7 @@
         border-top: 2px solid #dee2e6;
 
         &:last-child {
-          color: red; // verde bootstrap
+          color: #198754; // verde bootstrap
         }
       }
     }
