--- a/app/assets/stylesheets/pages/_cart_show.scss
+++ b/app/assets/stylesheets/pages/_cart_show.scss
@@ -1,6 +1,8 @@
 // SCSS correspondiente a cart show 21Jul25
 .basket-container {
   margin-top: 2rem;
+  background: white;
+  padding: 8px;
 
   h2 {
     font-size: 2rem;
