--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -32,9 +32,10 @@
       </div>
     </div>
 
-    <%= link_to cart_path, class: "btn btn-outline-dark" do %>
+    <%= link_to cart_path, class: "cart-link" do %>
       <i class="fa-solid fa-cart-shopping"></i>
-    <% end %>  </div>
+    <% end %>
+ </div>
 </nav>
 
 <%# estilo del menu dropdown %>
