--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -49,10 +49,11 @@
                 <%= link_to 'Éditer', edit_article_path(@article), class: 'btn btn-warning' %>
                 <%= button_to 'Supprimer', article_path(@article), method: :delete, data: { confirm: 'Êtes-vous sûr de vouloir supprimer cet article ?' }, class: 'btn btn-danger' %>
             <% end %>
-            <%= form_with url: cart_items_path, method: :post do |f| %>
+            <%= form_with url: cart_items_path, method: :post, html: { onsubmit: "const btn = this.querySelector('input[type=submit]'); btn.disabled = true; btn.value = 'Ajouté';" } do |f| %>
               <%= hidden_field_tag :article_id, @article.id %>
               <%= f.submit 'Ajouter au panier', class: 'button-ajouter-au-panier' %>
             <% end %>
+
           </div>
 
       </div>
