--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -11,34 +11,35 @@
   <% if @cart.cart_items.any? %>
     <div class="table-responsive">
       <table class="table table-bordered table-hover align-middle shadow-sm rounded bg-white">
-        <thead class="table-light text-center">
-          <tr>
-            <th scope="col">Article</th>
-            <th scope="col">Prix unitaire</th>
-            <th scope="col">Quantité</th>
-            <th scope="col">Total</th>
-          </tr>
-        </thead>
-        <tbody class="text-center">
-          <% total = 0 %>
-          <% @cart.cart_items.includes(:article).each do |item| %>
-            <% subtotal = item.article.price * item.quantity %>
-            <% total += subtotal %>
-            <tr>
-              <td class="fw-semibold"><%= item.article.name %></td>
-              <td><%= number_to_currency(item.article.price, unit: "€") %></td>
-              <td><%= item.quantity %></td>
-              <td><%= number_to_currency(subtotal, unit: "€") %></td>
-            </tr>
-          <% end %>
-        </tbody>
-        <tfoot class="table-light">
-          <tr>
-            <th colspan="3" class="text-end">Total:</th>
-            <th><%= number_to_currency(total, unit: "€") %></th>
-          </tr>
-        </tfoot>
-      </table>
+  <thead class="table-light text-center">
+    <tr>
+      <th scope="col">Article</th>
+      <th scope="col">Prix unitaire</th>
+      <th scope="col">Quantité</th>
+      <th scope="col">Total</th>
+      <th scope="col">Action</th> <!-- Nueva columna -->
+    </tr>
+  </thead>
+  <tbody class="text-center">
+    <% total = 0 %>
+    <% @cart.cart_items.includes(:article).each do |item| %>
+      <% subtotal = item.article.price * item.quantity %>
+      <% total += subtotal %>
+      <tr>
+        <td class="fw-semibold"><%= item.article.name %></td>
+        <td><%= number_to_currency(item.article.price, unit: "€") %></td>
+        <td><%= item.quantity %></td>
+        <td><%= number_to_currency(subtotal, unit: "€") %></td>
+        <td>
+          <%= button_to "Supprimer", cart_item_path(item),
+              method: :delete,
+              data: { confirm: "Êtes-vous sûr de vouloir supprimer cet article ?" },
+              class: "btn btn-danger btn-sm supprimer-btn" %>
+        </td>
+      </tr>
+    <% end %>
+  </tbody>
+
     </div>
 
     <div class="text-end mt-3">
