--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -63,7 +63,7 @@
 
     <div class="text-end mt-3">
       <h5 id="cart_total">Total: <%= number_to_currency(@cart.total_price, unit: "€") %></h5>
-      <%= link_to "🧾 Passer au paiement", checkout_path, class: "btn btn-success px-4 py-2 mt-3" %>
+      <%= link_to "🧾 Passer au paiement", cart_checkout_path, class: "btn btn-success px-4 py-2 mt-3" %>
     </div>
   <% else %>
     <div class="alert alert-info text-center mt-4" role="alert">
