--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -37,13 +37,23 @@
                         value: item.quantity %>
                   <%= f.submit "Mettre à jour", class: "btn btn-sm btn-outline-primary ms-2" %>
                 <% end %>
+                <% if item.errors[:quantity].any? %>
+                  <div class="text-danger small mt-1">
+                    <%= item.errors[:quantity].join(", ") %>
+                  </div>
+                <% end %>
               </td>
               <td><%= number_to_currency(item.total_price, unit: "€") %></td>
               <td>
                 <%= button_to "Supprimer", cart_item_path(item),
                     method: :delete,
                     class: "btn btn-danger btn-sm",
-                    form: { data: { turbo_confirm: "Êtes-vous sûr de vouloir supprimer #{item.article.name} ?" } } %>
+                    form: {
+                      data: {
+                        turbo_confirm: "Êtes-vous sûr de vouloir supprimer #{item.article.name} ?",
+                        turbo_frame: "_top"
+                      }
+                    } %>
               </td>
             </tr>
           <% end %>
@@ -53,7 +63,7 @@
 
     <div class="text-end mt-3">
       <h5 id="cart_total">Total: <%= number_to_currency(@current_cart.total_price, unit: "€") %></h5>
-      <%= link_to "🧾 Passer au paiement", checkout_cart_path, class: "btn btn-success px-4 py-2 mt-3" %>
+      <%= link_to "🧾 Passer au paiement", "#", class: "btn btn-success px-4 py-2 mt-3" %>
     </div>
   <% else %>
     <div class="alert alert-info text-center mt-4" role="alert">
